Update documents
